# ncku

./: .gitignore  .hw1.el.~undo-tree~  .load.el.~undo-tree~  .test.el.~undo-tree~  LICENSE  README.md  data.xml  hi.csv  history.csv  hw1.el  hw1.el~  hw3.md  index.html  load.el  load.el~  out.js  package-lock.json  package.json  test.el  test.el~  test.js
cgap2021/hw1/: BasicFragmentShader.fs.glsl  BasicVertexShader.vs.glsl  Cargo.toml  README.md  cude2.glb  index.html
cgap2021/hw1/src/: gl-matrix.js  gl-unit.js  glb.js  gltf.js  index.js  main.rs  shader.frag  shader.js  wgpu_state.rs
final/: _pmid.txt  _pmid2.txt  pmid-bipolardis-set.txt  pmid-covid-anosmia-set.txt  pmid-covid-bd-set.txt  pmid-covid-brain-set.txt  pmid-covid-dysgeusia-set.txt  pmid.txt
final-project/: README.md  dataset.ipynb  demo.ipynb  history3.csv  normal.csv  simsiam.csv  simsiam.xlsx
final-proposal/: proposal.aux  proposal.blg  proposal.fdb_latexmk  proposal.fls  proposal.tex
hw1/: README.md  slime.glb
hw1-rust/: Cargo.toml  test.glb
hw2/: README.md  dl_data.js  dl_data.js.map  dl_data.ts  index.html
hw2_plus/: README.md
hw3/: README.md  dl_data.ts  docs.ts  egbib.bib  ex7.ipynb  index.html  metadata-ex6.tsv:Zone.Identifier  metadata-ex8.tsv  metadata.tsv  pmid-bipolardis-set.txt  proposal.aux  proposal.bbl  proposal.blg  proposal.doc  proposal.fdb_latexmk  proposal.fls  proposal.tex  vectors-ex6.tsv:Zone.Identifier
hw4/: README.md  bd_sents.json  bd_tokens.json  covid_sents.json  covid_tokens.json  dl_data.ts  docs.ts  hw4.ipynb  metadata-ex2.tsv  metadata.tsv  types.ts  (+5 more)
ip2020/hw2/: Cargo.toml  DIP2020FinalProject.pptx  netModel.pt  traced_netModel.pt
ip2020/hw2/dl_source/: dataset.ipynb  model2-train.ipynb
ip2020/hw2/model/: traced_netModel-cross-0.pt  traced_netModel-cross-1.pt  traced_netModel-cross-2.pt  traced_netModel-cross-3.pt  traced_netModel-cross-4.pt
ip2020/hw2/report/: final_report.docx  img.pptx
ip2020/hw2/src/: main.rs
mca2021/hw1/: Cargo.toml  hw1.docx  img.pptx  news_pr.csv  ngc_pr_correction.csv  soccer_pr.csv  soccer_pr_correction.csv
mca2021/hw1/pr_curve/: news_pr.csv  ngc_pr.csv
mca2021/hw1/report/: hw1.docx
mca2021/hw1/src/: main.rs
mca2021/hw2/: Cargo.toml  README.md  params.txt
mca2021/hw2/data/: soccer1_mask.csv  soccer2_mask.csv
mca2021/hw2/examples/color/: main.rs
mca2021/hw2/report/: hw2.docx  img.pptx
mca2021/hw2/src/: dataset.rs  load_data.rs  main copy.rs  main.rs  save.rs
mca2021/hw2/weights/: k16.json  m1k2.json  m1k4.json  m1k8.json  m2k16.json  m2k2.json  m2k4.json  m2k8.json
(+472 files in other folders)
