[package]
name = "hw1"
version = "0.1.0"
authors = ["toonnyy8 <toonnyy8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
image = "0.23.14"
imageproc = "0.22.0"
ndarray = "0.14.0"
indicatif = "0.15.0"