[package]
name = "hw2"
version = "0.1.0"
authors = ["toonnyy8 <toonnyy8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-machine= { git = "https://github.com/toonnyy8/rusty-machine.git" }
image = "0.23.14"
clap = "3.0.0-beta.2"
serde = "1.0.125"
serde_json = "1.0"
serde_derive = "1.0.125"